--- a/backend/package.json
+++ b/backend/package.json
@@ -11,17 +11,23 @@
 		"dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
 	},
 	"dependencies": {
+		"bcrypt": "^5.1.1",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
-		"mongoose": "^7.5.0"
+		"jsonwebtoken": "^9.0.2",
+		"mongoose": "^7.5.0",
+		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.0",
 		"@types/cookie-parser": "^1.4.3",
 		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.17",
+		"@types/jsonwebtoken": "^9.0.2",
 		"@types/node": "^20.5.7",
+		"@types/uuid": "^9.0.3",
 		"concurrently": "^8.2.1",
 		"nodemon": "^3.0.1",
 		"typescript": "^5.2.2"
